k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  replicas: 1  # Bajamos a 1 para que no se peleen por la base de datos mientras probamos
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: ghcr.io/asstrid98/url-shortener:latest
          # --- AQUÍ ESTÁ EL ARREGLO ---
          command: ["python"]
          args: ["app/app.py"] 
          # ----------------------------
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 20 # Aumentamos un poco el tiempo para que le dé tiempo a conectar a la DB
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
