k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  to:
    kind: Service
    name: url-shortener
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
